--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -4,8 +4,8 @@
     "runtime-version": "6.10",
     "sdk": "org.kde.Sdk",
     "command": "marknote",
-    "tags": ["nightly"],
-    "desktop-file-name-suffix": " (Nightly)",
+    "tags": ["custom"],
+    "desktop-file-name-suffix": " (Custom)",
     "finish-args": [
         "--share=ipc",
         "--share=network",
